# tonic-test-repo

./: Cargo.toml  README.md
proto/: services.proto
src/: client.rs  lib.rs  server.rs
ssl/: Makefile  ca.crt  ca.key  ca.srl  server.bundle.crt  server.conf  server.crt  server.csr  server.key
